Refactor DeveloperScreen and update related files
- Refactored `DeveloperScreen.kt` to enhance UI, improve data fetching with Retrofit logging, and handle UI states (Loading, Success, Error) more effectively.
    - Moved data classes, API interface, Retrofit instance, repository, and ViewModel related to developer info into `DeveloperScreen.kt`.
    - Added `HttpLoggingInterceptor` to Retrofit for debugging network requests.
    - Updated `DeveloperProfileCard` and `RepositoryCard` composables for better UI presentation and added click listeners for copying info and opening GitHub links.
    - Introduced `InfoItemStyled` composable for displaying key-value pairs with icons.
    - Improved error handling with a dedicated `ErrorCard` composable.
    - Changed package from `com.anto426.dynamicisland.ui.settings.pages.dev` to `com.anto426.dynamicisland.ui.settings.pages`.
- Updated `app/build.gradle`:
    - Added `androidx.lifecycle:lifecycle-runtime-compose:2.9.2`.
    - Added `com.squareup.okhttp3:okhttp-dnsoverhttps:5.1.0`.
- Updated `AboutSettingsScreen.kt` to use string resources for developer and repository URLs.
- Updated `AndroidManifest.xml` to include `ACCESS_NETWORK_STATE` and `ACCESS_WIFI_STATE` permissions.
- Updated `IslandNavHost.kt` to reflect the package change of `DeveloperScreen`.
- Updated `app/src/main/res/values/strings.xml` with new and modified string resources for the DeveloperScreen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,16 +16,15 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="recent_repositories">https://github.com/Anto426/MaterialYou-Dynamic-Island</string>
+    <string name="repositories">https://github.com/Anto426/MaterialYou-Dynamic-Island</string>
     <string name="developer_avatar_desc">nessuna descrizone</string>
-    <string name="followers_count">0</string>
-    <string name="no_bio">.</string>
-    <string name="following_count">.</string>
-    <string name="no_description">.</string>
-    <string name="stars_count">.</string>
-    <string name="language">.</string>
-    <string name="error_message">.</string>
-    <string name="retry_button">.</string>
-    <string name="developer_info_title" />
+    <string name="no_bio">Nessuna biografia disponibile</string>
+    <string name="no_description">Nessuna descrizione disponibile</string>
+    <string name="stars_count">Numero di stelle</string>
+    <string name="language">Lingua</string>
+    <string name="error_message">Si è verificato un errore</string>
+    <string name="retry_button">Riprova</string>
+    <string name="developer_info_title">Informazioni sviluppatore</string>
+    <string name="developer">Anto426</string>
 
 </resources>
