Refactor DeveloperScreen and update MainActivity navigation
This commit introduces a significant refactor to the `DeveloperScreen.kt` for improved UI/UX and code structure. It also updates the bottom navigation bar in `MainActivity.kt`.

**DeveloperScreen.kt:**
- **UI Enhancements:**
    - Implemented `AnimatedContent` for smoother transitions between loading, error, and success states.
    - Redesigned the layout for better readability and visual appeal, including:
        - A new `DeveloperProfileCard` with a more prominent avatar, bolded name, and primary-colored username.
        - Bio is now displayed directly.
        - Followers and following stats are presented in a compact row using a new `StatItem` composable.
        - `RepositoryCard` now has a clickable area for the entire card to open the GitHub link and uses `surfaceVariant` for its background.
        - Repository stats (stars, language) are displayed using a new `RepoStat` composable.
        - Added a `ListHeader` composable for section titles.
        - Improved error state UI with a `CloudOff` icon.
- **Code Structure & Performance:**
    - Separated the success state content into a new `DeveloperProfileContent` composable.
    - Optimized `LazyColumn` usage by employing `items` for repository list rendering.
    - Simplified `RetrofitInstance` and `DeveloperRepository` implementation.
    - Improved error handling in `DeveloperViewModel` to provide more specific error messages for network issues (`IOException`) and HTTP errors (`HttpException`).
- **Resource Management:**
    - Added string resources for UI elements like "No description".
- **Navigation:**
    - The `DeveloperScreen` composable now accepts an `onNavigateUp` lambda. (Though not used in this diff, it's a preparatory change).

**MainActivity.kt:**
- **Bottom Navigation Bar:**
    - Updated the `NavigationBar` to use `MaterialTheme.colorScheme.surfaceColorAtElevation(3.dp).copy(alpha = 0.9f)` for a slightly transparent background.
 

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="repositories">https://github.com/Anto426/MaterialYou-Dynamic-Island</string>
+    <string name="repositories">https://github.com/Anto426/Dynamic-Island</string>
     <string name="developer_avatar_desc">nessuna descrizone</string>
     <string name="no_bio">Nessuna biografia disponibile</string>
     <string name="no_description">Nessuna descrizione disponibile</string>
@@ -25,6 +25,8 @@
     <string name="error_message">Si è verificato un errore</string>
     <string name="retry_button">Riprova</string>
     <string name="developer_info_title">Informazioni sviluppatore</string>
-    <string name="developer">Anto426</string>
+    <string name="developer">https://github.com/Anto426</string>
 
+
+    <!-- <string name="developer">Anto426</string> -->
 </resources>
