feat: update-system-integration
- Update navigation to include update settings page
- Add update-related string resources in multiple languages
- Configure AndroidManifest for update-related permissions
- Update build configurations for update system dependencies
- Remove deprecated update-config.json in favor of new system
- Update settings screens to integrate update functionality

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -157,6 +157,8 @@
     <string name="settings_item_about_subtitle">Dettagli sull’app</string>
     <string name="settings_item_dev">Sviluppo</string>
     <string name="settings_item_dev_subtitle">Informazioni sullo sviluppatore</string>
+    <string name="settings_item_updates">Aggiornamenti</string>
+    <string name="settings_item_updates_subtitle">Controlla e scarica aggiornamenti</string>
 
     <!-- Disclosure Screen (pulsanti) -->
     <string name="disclosure_button_next">Continua</string>
