i18n: drop outdated values-it placeholder; consolidate strings in default locale

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,4 +252,103 @@
         <string name="update_settings_section">Impostazioni Aggiornamento</string>
         <string name="show_advanced_settings">Mostra impostazioni avanzate</string>
         <string name="hide_advanced_settings">Nascondi impostazioni avanzate</string>
+        <string name="battery_charging_title" />
+        <string name="temperature" />
+        <string name="power_source" />
+        <string name="health" />
+        <string name="battery_low_title" />
+        <string name="battery_remaining_subtitle" />
+        <string name="battery_saver" />
+        <string name="power_saver_active_desc" />
+        <string name="charging" />
+        <string name="low_battery" />
+        <string name="power_saver" />
+        <string name="configured" />
+        <string name="app_configured_ready" />
+        <string name="update_card_title" />
+        <string name="download" />
+        <string name="permissions_required" />
+        <string name="configure_permissions_start" />
+
+        <string name="onboarding_welcome_title">Onboarding Welcome Title</string>
+        <string name="onboarding_welcome_description">Onboarding welcome description.</string>
+        <string name="permission_accessibility_title">Accessibility Service Title</string>
+        <string name="permission_accessibility_desc">Accessibility service description.</string>
+        <string name="permission_category_system">System Category</string>
+        <string name="permission_overlay_title">Overlay Permission Title</string>
+        <string name="permission_overlay_desc">Overlay permission description.</string>
+        <string name="permission_battery_title">Battery Optimization Title</string>
+        <string name="permission_battery_desc">Battery optimization description.</string>
+        <string name="permission_notification_listener_title">Notification Listener Title</string>
+        <string name="permission_notification_listener_desc">Notification listener description.</string>
+        <string name="permission_category_notifications">Notifications Category</string>
+        <string name="permission_post_notifications_title">Post Notifications Title</string>
+        <string name="permission_post_notifications_desc">Post notifications description.</string>
+        <string name="permission_vibrate_title">Vibrate Permission Title</string>
+        <string name="permission_vibrate_desc">Vibrate permission description.</string>
+        <string name="permission_storage_legacy_title">Legacy Storage Title</string>
+        <string name="permission_storage_legacy_desc">Legacy storage description.</string>
+        <string name="permission_category_storage">Storage Category</string>
+        <string name="permission_media_images_title">Media Images Title</string>
+        <string name="permission_media_images_desc">Media images description.</string>
+        <string name="permission_media_video_title">Media Video Title</string>
+        <string name="permission_media_video_desc">Media video description.</string>
+        <string name="permission_media_audio_title">Media Audio Title</string>
+        <string name="permission_media_audio_desc">Media audio description.</string>
+        <string name="permission_unknown_sources_title">Unknown Sources Title</string>
+        <string name="permission_unknown_sources_desc">Unknown sources description.</string>
+        <string name="permission_category_updates">Updates Category</string>
+        <string name="onboarding_step_counter">Step %1$d of %2$d</string>
+        <string name="onboarding_permission_granted">Permission Granted</string>
+        <string name="permission_granted_label">Granted</string>
+        <string name="enable_in_settings">Enable in Settings</string>
+        <string name="onboarding_finish">Finish</string>
+        <string name="onboarding_continue">Continue</string>
+        <string name="onboarding_setup_complete_title">Setup Complete Title</string>
+        <string name="onboarding_setup_complete_desc">Setup complete description.</string>
+        <string name="plugins_enabled_count">%1$d enabled</string>
+        <string name="go_to_details">Go to details</string>
+        <string name="search">Search</string>
+        <string name="search_settings_placeholder">Search settings...</string>
+        <string name="clear_search">Clear search</string>
+        <string name="no_results_found">No results found.</string>
+        <string name="try_different_keywords">Try different keywords.</string>
+        <string name="reset_settings">Reset settings</string>
+        <string name="behavior_visibility_section">Visibility Section</string>
+        <string name="behavior_autohide_section">Autohide Section</string>
+        <string name="behavior_animations_feedback_section">Animations &amp; Feedback Section</string>
+        <string name="dev_error_connection">Connection error.</string>
+        <string name="dev_error_not_found">Not found error.</string>
+        <string name="dev_error_unknown">Unknown error.</string>
+        <string name="dev_loading_title">Loading title...</string>
+        <string name="dev_loading_subtitle">Loading subtitle...</string>
+        <string name="error">Error</string>
+        <string name="dev_error_title">Error Title</string>
+        <string name="retry">Retry</string>
+        <string name="dev_profile_title">Profile Title</string>
+        <string name="dev_updated_from_github">Updated from GitHub</string>
+        <string name="dev_public_repos_title">Public Repositories</string>
+        <string name="dev_no_public_repos_title">No Public Repositories</string>
+        <string name="dev_no_public_repos_desc">No public repositories description.</string>
+        <string name="avatar_of">Avatar of %1$s</string>
+        <string name="open_profile">Open Profile</string>
+        <string name="copy_username">Copy Username</string>
+        <string name="stars">Stars</string>
+        <string name="open_repository">Open Repository</string>
+        <string name="enabled_apps_summary">Enabled apps summary.</string>
+        <string name="style_title">Style</string>
+        <string name="update_available_prompt">Update available</string>
+        <string name="update_channel_description">Update channel description.</string>
+        <string name="permission_required_title">Permission Required</string>
+        <string name="permission_required_text">Permission required text.</string>
+        <string name="update_notification_title">Update Notification Title</string>
+        <string name="update_preparing_download">Preparing download...</string>
+        <string name="update_download_channel_description">Update download channel description.</string>
+        <string name="settings_item_advanced" />
+        <string name="settings_item_advanced_subtitle" />
+        <string name="destination_plugin_settings" />
+        <string name="destination_advanced" />
+        <string name="destination_settings" />
+        <string name="destination_home" />
+        <string name="destination_plugins" />
 </resources>
