--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -200,6 +200,7 @@
     <string name="auto_download_desc">Updates automatisch herunterladen</string>
     <string name="check_updates_button">Nach Updates suchen</string>
     <string name="download_update_button">Update herunterladen</string>
+    <string name="install_update_button">Update installieren</string>
     <string name="downloading_progress">Wird heruntergeladen...</string>
     <string name="changelog_version">Version %1$s (%2$s)</string>
     <string name="copied_to_clipboard">%1$s in die Zwischenablage kopiert!</string>
