--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
 
     <string name="check_updates_button">Check for Updates</string>
     <string name="download_update_button">Download Update</string>
+    <string name="install_update_button">Install Update</string>
     <string name="downloading_progress">Downloading...</string>
 
     <string name="changelog_version">Version %1$s (%2$s)</string>
